--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <canvas id="tetris" width="200" height="400">
     </canvas>
     <script src="JS/tetris.js"></script>
+    <script src="JS/tetrominoes.js"></script>
 </body>
 
 </html>
