set the variables for the board and called canvas from DOM

--- a/tetris/index.html
+++ b/tetris/index.html
@@ -3,15 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/home/raahima/tetris/tetris/css/style.css"> </link>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" charset="utf-8"></script>
     <title>Tetris Game</title>
 </head>
 <body>
-    <canvas id="tetris" width="200" height="400">
+    <br>
+    <h1>TETRIS</h1>
+    <canvas id="tetris" width="300" height="600">
     </canvas>
-    <script src="JS/tetris.js"></script>
-    <script src="JS/tetrominoes.js"></script>
+
+    <div>
+        Score : <div id="score">0</div>
+    </div>
+    <button type="button">Play Again</button>
+    <script src="/home/raahima/tetris/tetris/JS/tetrominoes.js"></script>
+    <script src="/home/raahima/tetris/tetris/JS/tetris.js"></script>
+    
 </body>
 
 </html>
+
