--- a/tetris/index.html
+++ b/tetris/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/home/raahima/tetris/tetris/css/style.css"> </link>
+    <link rel="stylesheet" href="./css/style.css"> </link>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" charset="utf-8"></script>
     <title>Tetris Game</title>
 </head>
@@ -17,8 +17,8 @@
     </div>
 
     <button type="button">Play Again</button>
-    <script src="/home/raahima/tetris/tetris/JS/tetrominoes.js"></script>
-    <script src="/home/raahima/tetris/tetris/JS/tetris.js"></script>
+    <script src="./JS/tetrominoes.js"></script>
+    <script src="./JS/tetris.js"></script>
     
 </body>
 
