--- a/tetris/index.html
+++ b/tetris/index.html
@@ -8,6 +8,7 @@
     <title>Tetris Game</title>
 </head>
 <body>
+    <div style="background-image: url('../tetris/images/bg.jpg');"></div>
     <h2>TETRIS</h2>
     <canvas id="tetris" width="300" height="600">
     </canvas>
